--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
-0.001 2023-11-14
+0.002 2023-11-14
   [Requirement Changes]
     * Require SPVM 0.989061.
+    * Require SPVM::Sys 0.495.
     
 0.001 2023-11-08
   [Changes]
