--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
   [Requirement Changes]
     * Require SPVM 0.989061.
     * Require SPVM::Sys 0.495001.
+  [Incompatible Changes]
+    * The return types of Go->goshced and Go->sleep become void.
+  [New Features]
+    * Add the gosched_io_read and gosched_io_write methods are added to the Go class.
     
 0.001 2023-11-08
   [Changes]
