--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.004 2023-11-17
+  [Requirement Changes]
+    * Require SPVM::Sys 0.499.
 0.003 2023-11-15
   [Requirement Changes]
     * Require SPVM::Thread 0.001.
