--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.005002 2023-11-29
+  [Requrement Changes]
+    * Require SPVM 0.989063.
+    * Require SPVM::Time::HiRes 0.003.
+    * Require SPVM::Sys 0.502.
+    
 0.005001 2023-11-26
   [Test Fix]
     * Catch up with the latest Sys class.
