--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@
     * Require SPVM 0.989063.
     * Require SPVM::Time::HiRes 0.003.
     * Require SPVM::Sys 0.502.
+  [Bug Fix]
+    * Fix the bug that after or timeout is not culcurated by double.
+  [New Features]
+    * Use CLOCK_MONOTONIC if the sysmtem support it.
     
 0.005001 2023-11-26
   [Test Fix]
