--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.007001 2023-11-30
+  [Internal Changes]
+    * Use Sys->kill instead of Sys::Signal->raise.
 0.007 2023-11-30
   [Requrement Changes]
     * Require SPVM::Time::HiRes 0.004.
