--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.007002 2023-12-07
+  [Requrement Changes]
+    * Require SPVM::Sys 0.510.
 0.007001 2023-11-30
   [Internal Changes]
     * Use Sys->kill instead of Sys::Signal->raise.
