--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.008 2024-10-18
+  [Document Improvemetn]
+    * Add docs for Go::Error::IOTimeout.
+    
 0.007003 2024-06-10
   [Requrement Changes]
     * Require SPVM::Sys 0.523.
