--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.012 2025-10-13
+  [Internal Changes]
+    * Do internal changes to catch up latest SPVM.
+    
 0.011 2025-09-15
   [Internal Changes]
     * Fix generics bugs.
