--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.012 2025-10-13
   [Internal Changes]
     * Do internal changes to catch up latest SPVM.
+  [Requirement Changes]
+    * Require SPVM 0.990102.
     
 0.011 2025-09-15
   [Internal Changes]
