--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
-0.012 2025-10-13
+0.013 2025-10-13
   [Changes]
     * Use QList instead of List internally.
+    
+0.012 2025-10-13
+  [Internal Changes]
+    * Require 0.990102.
     
 0.011 2025-09-15
   [Internal Changes]
