--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.014 2025-01-13-05
+  [Changes]
+    * Channel#read $ok_ref argument becomes optional. 
   [Bug Fix]
     * Fix a bug that Go::Select#select blocks when the channel is closed.
     * Fix a bug that POLL->POLLHUP, POLL->POLLNVAL, POLL->POLLERR is not treated.
