--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.015 2026-01-06
+  [Incompatibe Changes]
+    * Throw an exception if a second main goroutine exist.
   [Changes]
     * Throw an exception when leak goroutines exist.
     
