--- a/Changes
+++ b/Changes
@@ -7,6 +7,8 @@
     * Fix a bug that Go::OS::Signal#notify catches a signal only once.
   [Internal Changes]
     * Go::OS::Signal is implemented using Thread instead of goroutine.
+  [New Features]
+    * Add Go#gosched_with_signal_handler method.
     
 0.015 2026-01-06
   [Bug Fix]
