--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.017 2026-01-14
+  [New Features]
+    * Add Go::Context class.
+    * Add the following methods.
+    
+      Go#sleep_sec
+      Go#gosched_io_read_sec
+      Go#gosched_io_write_sec
+    
 0.016 2026-01-08
   [Bug Fix]
     * Fix a bug that Go::OS::Signal#notify catches a signal only once.
