Require SPVM::Regex 0.246.

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 0.019 2026-01-16
   [Changes]
     * Fix Go::Context bugs and add Go::Context tests and documents.
-    
+  [Requirement Changes]
+    * Require SPVM::Regex 0.246.
 0.018 2026-01-15
   [Document and Test Improvement]
     * Add Go::Time tests and documents.
