--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.020 2026-01-17
   [Incompatible Changes]
     * Rename Go::Time#to_rfc3339_nano to format_rfc3339_nano.
+    * Rename Go::Time#new_from_rfc3339_nano to parse_rfc3339_nano.
 0.019 2026-01-16
   [Changes]
     * Fix Go::Context bugs and add Go::Context tests and documents.
