--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.021 2026-01-17
+  [Incompatible Changes]
+    * Change Go#sleep method definition.
+      [Before]
+        static method sleep : void ($seconds : double = 0);
+      [After]
+        static method sleep : void ($duration : Go::Duration_1l);
+
 0.020 2026-01-17
   [Incompatible Changes]
     * Rename Go::Time#to_rfc3339_nano to format_rfc3339_nano.
