Change Go#gosched_io_read method definition.
  [Incompatible Changes]
    * Change Go#gosched_io_read method definition.
      [Before]
        static method gosched_io_read : void ($fd : int, $timeout : double = 0);
      [After]
        static method gosched_io_read : void ($fd : int, $timeout_duration : Go::Duration_1l);

--- a/Changes
+++ b/Changes
@@ -5,6 +5,11 @@
         static method sleep : void ($seconds : double = 0);
       [After]
         static method sleep : void ($duration : Go::Duration_1l);
+    * Change Go#gosched_io_read method definition.
+      [Before]
+        static method gosched_io_read : void ($fd : int, $timeout : double = 0);
+      [After]
+        static method gosched_io_read : void ($fd : int, $timeout_duration : Go::Duration_1l);
 
 0.020 2026-01-17
   [Incompatible Changes]
