--- a/Changes
+++ b/Changes
@@ -17,7 +17,8 @@
         static method gosched_io_write : void ($fd : int, $timeout : double = 0);
       [After]
         static method gosched_io_write : void ($fd : int, $timeout_duration : Go::Duration_1l);
-
+  [Internal Changes]
+    * Use Go::Time and duration in all place instead of Timespec and floating seconds.
 
 0.020 2026-01-17
   [Incompatible Changes]
