--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.022 2026-01-24
+  [Internal Changes]
+    * Catch up with latest SPVM.
+  [Requirement Changes]
+    * Require SPVM 0.990116.
+    
 0.021 2026-01-17
   [Incompatible Changes]
     * Rename Go::Context#with_background to background.
