--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.023 2026-01-28
+  [Requirement Changes]
+    * Require SPVM 0.990119.
+  [Internal Changes]
+    * Use die_v2 native API in native classes.
 0.022 2026-01-24
   [Internal Changes]
     * Catch up with latest SPVM.
